# xrc20

./: .gitignore  Cargo.toml  README.md  lib.rs
.ink/abi_gen/: Cargo.toml  main.rs
scripts/: dev-deploy-btcxrc20.js  package.json
src/: lib.rs
