[package]
name = "xrc20"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
ink_abi = { git = "https://github.com/chainx-org/ink", branch = "fix-events-encode", package = "ink_abi", default-features = false, features = ["derive"], optional = true }
ink_core = { git = "https://github.com/chainx-org/ink", branch = "fix-events-encode", package = "ink_core", default-features = false, features = ["old-codec"] }
ink_lang = { git = "https://github.com/chainx-org/ink", branch = "fix-events-encode", package = "ink_lang", default-features = false, features = ["old-codec"] }
ink_prelude = { git = "https://github.com/chainx-org/ink", branch = "fix-events-encode", package = "ink_prelude", default-features = false }

scale = { package = "parity-codec", version = "3.5", default-features = false, features = ["derive"] }
type-metadata = { git = "https://github.com/type-metadata/type-metadata.git", default-features = false, features = ["derive"], optional = true }


[lib]
name = "xrc20"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
	# Used for ABI generation.
	"rlib",
]

[features]
default = ["test-env"]
std = [
    "ink_abi/std",
    "ink_core/std",
    "ink_lang/std",
    "type-metadata/std",
    "scale/std",
]
test-env = [
	"std",
    "ink_core/test-env",
    "ink_lang/test-env",
]
ink-generate-abi = [
    "std",
    "ink_abi",
    "type-metadata",
    "ink_core/ink-generate-abi",
    "ink_lang/ink-generate-abi",
]
ink-as-dependency = []

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true

[workspace]
members = [
	".ink/abi_gen"
]
exclude = [
	".ink"
]
