[package]
name = "abi-gen"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
publish = false

[[bin]]
name = "abi-gen"
path = "main.rs"

[dependencies]
contract = { path = "../..", package = "xrc20", default-features = false, features = ["ink-generate-abi"] }
ink_lang = { git = "https://github.com/chainx-org/ink", package = "ink_lang", default-features = false, features = ["old-codec"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
